# clipcart

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt  wrangler.jsonc
data/: bio_links.json  format_profile.json  history.json  metrics.json  niche_state.json  niche_state_ali.json  posts.json  products.json
docs/: README.md  content-quality-upgrade.md  conversion-funnel.md  index.html  instagram-setup.md  pinterest-setup.md  platforms.md  privacy-policy-template.md  privacy.html  terms.html  tiktok-setup.md  trend-analysis.md
docs/bio/: index.html
docs/callback/: index.html
docs/templates/: reels-storytelling.md
scripts/: ali_daily.ps1  ali_daily.sh  cleanup_comments.py  com.clipcart.ali-daily.plist  daily_task.ps1  fix_today_post.py  republish_improved.py  rerender_today.py  retrofit_descriptions.py  test_coupang.py
src/clipcart/: __init__.py  aliexpress.py  cli.py  config.py  coupang.py  disclosure.py  storage.py
src/clipcart/analytics/: collector.py  (+1 more)
tests/: test_aliexpress.py  test_auto_select_ali.py  test_beats.py  test_beats_video.py  test_bio_page.py  test_clean_window.py  test_compliance.py  test_coupang_reports.py  test_daily_bio_refresh.py  test_daily_source.py  test_disclosure.py  test_fonts.py  test_history.py  test_history_sync.py  test_kling.py  test_metrics.py  test_model_template.py  test_niches.py  test_positive_visuals.py  test_price_band.py  test_pricing.py  test_report.py  test_review_card.py  test_script_style.py  test_subid.py  test_thumbnail.py  test_title_variety.py
(+47 files in other folders)
